--- a/CustomRPC/MainForm.fa.resx
+++ b/CustomRPC/MainForm.fa.resx
@@ -461,4 +461,7 @@
   <data name="$this.RightToLeftLayout" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="faqToolStripMenuItem.Text" xml:space="preserve">
+    <value>سوالات پرتکرار</value>
+  </data>
 </root>
