--- a/CustomRPC/MainForm.sv.resx
+++ b/CustomRPC/MainForm.sv.resx
@@ -314,4 +314,7 @@ För att ta effekt så ska båda fälten vara mer än 0.</value>
   <data name="radioButtonPresence.ToolTip" xml:space="preserve">
     <value>Visar hur mycket tid som har passerat sedan du senast anslöt eller uppdaterade närvaron.</value>
   </data>
+  <data name="faqToolStripMenuItem.Text" xml:space="preserve">
+    <value>Vanliga frågor</value>
+  </data>
 </root>
