--- a/CustomRPC/MainForm.da.resx
+++ b/CustomRPC/MainForm.da.resx
@@ -444,4 +444,7 @@ For at virke, skal begge felter være mere end 0.</value>
   <data name="labelPartyOf.Text" xml:space="preserve">
     <value>af</value>
   </data>
+  <data name="faqToolStripMenuItem.Text" xml:space="preserve">
+    <value>Ofte Stillede Spørgsmål</value>
+  </data>
 </root>
