--- a/CustomRPC/Strings.resx
+++ b/CustomRPC/Strings.resx
@@ -189,4 +189,7 @@ Press Yes to reset the settings, press No to quit.</value>
   <data name="errorStartupShortcut" xml:space="preserve">
     <value>Failed to add or remove a startup shortcut:</value>
   </data>
+  <data name="errorOpeningURL" xml:space="preserve">
+    <value>Failed to open the URL. It has been copied to the clipboard.</value>
+  </data>
 </root>
