Updated de, hi, ko, nl, pa, tr

--- a/CustomRPC/Strings.de.resx
+++ b/CustomRPC/Strings.de.resx
@@ -190,4 +190,7 @@ Drücke "Ja", um sie zurückzusetzen oder "Nein", um das Programm zu beenden.</v
   <data name="errorStartupShortcut" xml:space="preserve">
     <value>Fehler beim Hinzufügen oder Entfernen einer Startverknüpfung:</value>
   </data>
+  <data name="errorOpeningURL" xml:space="preserve">
+    <value>Öffnen der URL fehlgeschlagen. Es wurde in die Zwischenablage kopiert.</value>
+  </data>
 </root>
