--- a/CustomRPC/Strings.pt-BR.resx
+++ b/CustomRPC/Strings.pt-BR.resx
@@ -184,4 +184,7 @@ Pressione Sim para redefinir as configurações, pressione Não para sair.</valu
   <data name="errorStartupShortcut" xml:space="preserve">
     <value>Falha ao adicionar ou remover um atalho de inicialização:</value>
   </data>
+  <data name="errorOpeningURL" xml:space="preserve">
+    <value>Falha ao abrir a URL. Ela foi copiada para a área de transferência.</value>
+  </data>
 </root>
