--- a/CustomRPC/Strings.ja.resx
+++ b/CustomRPC/Strings.ja.resx
@@ -185,6 +185,6 @@
     <value>スタートアップのショートカットの追加または削除に失敗しました:</value>
   </data>
   <data name="errorOpeningURL" xml:space="preserve">
-    <value>URLを開くのに失敗したのでクリップボードにコピーしました。</value>
+    <value>URLを開くのに失敗しました。クリップボードにURLをコピーしました。</value>
   </data>
 </root>
