--- a/CustomRPC/Strings.ko.resx
+++ b/CustomRPC/Strings.ko.resx
@@ -187,4 +187,7 @@
   <data name="errorOpeningURL" xml:space="preserve">
     <value>URL을 열지 못했습니다. 클립보드에 복사되었습니다.</value>
   </data>
+  <data name="statusUpdatingPresence" xml:space="preserve">
+    <value>활동 상태 업데이트 중...</value>
+  </data>
 </root>
