--- a/CustomRPC/MainForm.lt.resx
+++ b/CustomRPC/MainForm.lt.resx
@@ -426,4 +426,7 @@ Kad abu laukai įsigaliotų, jie turėtų būti didesni nei 0.</value>
   <data name="radioButtonPresence.ToolTip" xml:space="preserve">
     <value>Rodo kiek laiko yra praėję, nuo būsenos paskutinio prisijungimo ar atnaujinimo.</value>
   </data>
+  <data name="faqToolStripMenuItem.Text" xml:space="preserve">
+    <value>Dažniausiai Klausiami Klausimai</value>
+  </data>
 </root>
