--- a/CustomRPC/Strings.cs.resx
+++ b/CustomRPC/Strings.cs.resx
@@ -184,4 +184,10 @@ Klikněte Ano pro reset nastavení, klikněte Ne pro opuštění.</value>
   <data name="errorStartupShortcut" xml:space="preserve">
     <value>Nepodařilo se přidat nebo odebrat zástupce při spuštění:</value>
   </data>
+  <data name="errorOpeningURL" xml:space="preserve">
+    <value>Nemohli jsme otveřít URL. Byla zkopírovaná do schránky.</value>
+  </data>
+  <data name="statusUpdatingPresence" xml:space="preserve">
+    <value>Aktualizuji přítomnost...</value>
+  </data>
 </root>
